# python-template

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/actions/lint/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: ci.yml
calculator/: __init__.py  calc.py
src/: main.py
src/app/: __init__.py  hello_word.py
src/tests/: hello_word_test.py  test_calc.py
tests/: test_calc.py
