[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Victor Predebon <victor.predebon@atarb2b.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"
faker = "^33.0.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_auto_indent = true
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
